timeline and some clean up

--- a/Final Project/aboutpaldea.html
+++ b/Final Project/aboutpaldea.html
@@ -133,79 +133,69 @@
                 <h2>Paldean History</h2>
                 <section class="timeline">
                     <!--Put all that should be in the timeline inside a ul tag-->
-                    <uL>
+                    <ul>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>2001</time>Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>c. 1,000,000 years prior</time>The Great Crater of Paldea was formed.
                             </div>
                         </li>
 
                         <li>
                             <div>
-                                <time>2002</time> Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>c. 2,000 years prior</time> The Paldean Empire began to rule Paldea.
+                                The emperor ushered in the Great Age of Exploration by sending expeditions into the Great Crater of Paldea to find the treasure rumored to lie inside Area Zero.
                             </div>
                         </li>
                         <li>
                             <div>
-                                <time>2022</time> Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>c. 1,000 years prior</time> The Paldean Empire fell into decline due to the expense of supporting countless failed Area Zero expeditions.
                             </div>
                         </li>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>2001</time>Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>805 years prior</time>Naranja Academy/Uva Academy was founded in Mesagoza.
                             </div>
                         </li>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>2001</time>Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>c. 800 years prior</time>The Paldean Empire unified with its neighboring countries, establishing the modern Paldea region.
                             </div>
                         </li>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>2001</time>Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>200 years prior</time>The Area Zero Expedition claimed to have become the first exploration team to reach the bottom of Area Zero. Team member Heath, a famed author and natural historian, published his account of the expedition as the Scarlet Book/Violet Book. The book's contents proved to be so fantastical that Heath and the rest of the Area Zero Expedition were accused of lying and widely discredited.
+                                The Area Zero Expedition planted Herba Mystica, a plant they discovered in Area Zero, in five sites around Paldea in an attempt to cultivate it. They abandoned the project when local Pokémon consumed the Herba Mystica and grew into fearsome Titans.
                             </div>
                         </li>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>2001</time>Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>c. 140 years prior</time>Terastallized Pokémon were discovered for the first time in Area Zero
                             </div>
                         </li>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>2001</time>Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>87 years prior</time>A research facility was constructed in Area Zero.
                             </div>
                         </li>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>2001</time>Lorem ipsum dolor sit amet consectetur adipisicing
-                                elit. Incidunt nostrum quidem eius repudiandae nam, nemo fuga
-                                architecto possimus id at rem beatae consequuntur dolor commodi.
+                                <time>c. 10 years prior</time>Professor Sada/Professor Turo discovered that the energy emitted by the crystals in Area Zero causes the Terastal phenomenon. The professor proceeded to invent the Tera Orb technology, sharing it with the Pokémon League and the Academy.
                             </div>
                         </li>
-                    </uL>
+                        <li>
+                            <div>
+                                <!--Use the time tag-->
+                                <time>c. One and a half years prior</time>Nemona passed the Paldea League's Champion Assessment and became the youngest person in Paldean history to achieve Champion Rank.
+                            </div>
+                        </li>
+                    </ul>
                 </section>
             </div>
         </div>
