--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -9,11 +9,11 @@
     <!-- Informs device to set viewport to its own width -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Summary of the web page as a news provider -->
-    <meta name="description" content="ninth generation Pokémon game, Paldea" />
+    <meta name="description" content="ninth generation Pokemon game, Paldea" />
     <!-- Author of the web page -->
     <meta name="author" content="Chiuchiyin" />
     <!-- Keywords relevant to web page content -->
-    <meta name="keywords" content="Pokémon, news, game" />
+    <meta name="keywords" content="Pokemon, news, game" />
     <!-- Link external CSS file to style and format web page !-->
     <link rel="stylesheet" href="stylesheet/main.css">
     <!-- Link external JS file for user interactivity !-->
@@ -134,15 +134,15 @@
                                 <h3>2023 Oceania VGC International Championships Preview Roundtable</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
-                                    <h4>Pokémon Fan <i class="fas fa-pen"></i></h4>
+                                    <h4>Pokemon Fan <i class="fas fa-pen"></i></h4>
                                     <p><i class="fas fa-calendar"></i> February 17, 2023 <i
                                         class="fas fa-comments"></i> 27 | Official Event
                                     </p>
                                 </section>
                                     <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
                                 <p>The anticipation ahead of the 2023 Oceania International Championships (OCIC) is off the charts. 
-                                    It’s the first International of the 2023 Championship season, the first to feature the Pokémon Scarlet and Pokémon Violet games, 
-                                    and the first to showcase Paradox Pokémon on a competitive level. 
+                                    It’s the first International of the 2023 Championship season, the first to feature the Pokemon Scarlet and Pokemon Violet games, 
+                                    and the first to showcase Paradox Pokemon on a competitive level. 
                                     To say there’s a lot to look forward to when the matches begin in Melbourne, Australia on February 17, 2023, is a massive understatement.
                                 </p>
                         </div>
@@ -162,9 +162,9 @@
                                         </p>
                                     </section>
                                     <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
-                                    <p>Between April 23rd and April 30th, St Baldrick's Foundation will once again be challenging the Pokémon streaming community to collectively catch 1 million Pokémon, 
+                                    <p>Between April 23rd and April 30th, St Baldrick's Foundation will once again be challenging the Pokemon streaming community to collectively catch 1 million Pokemon, 
                                         and in the process help them raise $100,000 in 7 days to fund childhood cancer research. 
-                                        Any and all streamers, big or small, with any appreciation whatsoever for Pokémon, are invited to participate in the event and help the foundation reach its fundraising goal.
+                                        Any and all streamers, big or small, with any appreciation whatsoever for Pokemon, are invited to participate in the event and help the foundation reach its fundraising goal.
                                     </p>
                         </div>
                     </div>
@@ -197,7 +197,7 @@
                             alt="Garganacl">
                             <section class="column-card-description">
                                 <!-- Primary article headline-->
-                                <h3>Use code「1STCHAMPSV」to receive Jiseok Lee's Garganacl in Pokémon Scarlet & Violet until February 20th</h3>
+                                <h3>Use code「1STCHAMPSV」to receive Jiseok Lee's Garganacl in Pokemon Scarlet & Violet until February 20th</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
                                     <h4>Archaic <i class="fas fa-pen"></i></h4>
@@ -206,8 +206,8 @@
                                     </p>
                                 </section>
                                     <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
-                                    <p>A limited-time distribution of Garganacl was announced for Pokémon Scarlet and Pokémon Violet during the October 17th livestream of the 2023 Pokémon Oceania International Championships in Melbourne, Australia. 
-                                    This Garganacl is based on the one used by Jiseok Lee in the 2023 Pokémon San Diego Regional Championships held on January 7th-8th. This distribution will remain available until February 20th, at 11:59pm (UTC).
+                                    <p>A limited-time distribution of Garganacl was announced for Pokemon Scarlet and Pokemon Violet during the October 17th livestream of the 2023 Pokemon Oceania International Championships in Melbourne, Australia. 
+                                    This Garganacl is based on the one used by Jiseok Lee in the 2023 Pokemon San Diego Regional Championships held on January 7th-8th. This distribution will remain available until February 20th, at 11:59pm (UTC).
                                     </p>
                         </div>
                     </div>
@@ -227,9 +227,9 @@
                                     </p>
                                 </section>
                                     <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
-                                    <p>Pokémon Scarlet and Violet released last November with a truly hilarious and mind-boggling amount of graphical glitches and bugs. 
-                                        But have no fear: Nintendo just announced a huge February update that should bring us closer to the quality we usually expect from the Pokémon series. 
-                                        The developers also added quality of life improvements to the Pokémon storage box system.
+                                    <p>Pokemon Scarlet and Violet released last November with a truly hilarious and mind-boggling amount of graphical glitches and bugs. 
+                                        But have no fear: Nintendo just announced a huge February update that should bring us closer to the quality we usually expect from the Pokemon series. 
+                                        The developers also added quality of life improvements to the Pokemon storage box system.
                                     </p>
                         </div>
                     </div>
@@ -238,7 +238,7 @@
                             <!-- Image has zoom effect and alt text for accessibility -->
                             <img src="images/shiny-hunting.webp" alt="Player character with Miraidon">
                                 <!-- Primary article headline-->
-                                <h3>Shiny Hunting Is About To Get Harder In Pokémon Scarlet And Violet</h3>
+                                <h3>Shiny Hunting Is About To Get Harder In Pokemon Scarlet And Violet</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
                                     <h4>Kenneth Shepard <i class="fas fa-pen"></i></h4>
@@ -247,9 +247,9 @@
                                     </p>
                                 </section>
                                     <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
-                                <p>Game Freak is rolling out another big update to Pokémon Scarlet and Violet at the end of the month, and while there’s some attention being given to the games’ 
+                                <p>Game Freak is rolling out another big update to Pokemon Scarlet and Violet at the end of the month, and while there’s some attention being given to the games’ 
                                     notorious performance issues, the solution the studio has gone with will fundamentally change certain aspects of the open-world RPG. 
-                                    Specifically, the team is looking to lower the amount of Pokémon it puts on screen at a time, which means that fewer will spawn at a time. 
+                                    Specifically, the team is looking to lower the amount of Pokemon it puts on screen at a time, which means that fewer will spawn at a time. 
                                     This has big implications for shiny hunting.
                                 </p>
                         </div>
@@ -259,7 +259,7 @@
                             <!-- Image has zoom effect and alt text for accessibility -->
                             <img src="images/pokemon-sv.jpeg" alt="pokemon-sv-official-mascot">
                                 <!-- Primary article headline-->
-                                <h3>Patch notes released for Pokémon Scarlet and Violet's Version 1.2.0 update - Update still scheduled for release in late February</h3>
+                                <h3>Patch notes released for Pokemon Scarlet and Violet's Version 1.2.0 update - Update still scheduled for release in late February</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
                                     <h4>Archaic <i class="fas fa-pen"></i></h4>
@@ -268,7 +268,7 @@
                                     </p>
                                 </section>
                                     <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
-                                <p>Nintendo have released draft patch notes for the upcoming Pokémon Scarlet and Pokémon Violet software update to Version 1.2.0, with information on added functionality for Pokémon Boxes, and a whole host of bug fixes. 
+                                <p>Nintendo have released draft patch notes for the upcoming Pokemon Scarlet and Pokemon Violet software update to Version 1.2.0, with information on added functionality for Pokemon Boxes, and a whole host of bug fixes. 
                                     As of writing, no firm date has been given for when this update will be available, with the patch notes only stating that the update is scheduled for the end of February 2023.
                                 </p>
                         </div>
@@ -277,7 +277,7 @@
                 <div class="current-item2">
                     <h2>Breaking news</h2>
                     <div class="current-item10">
-                        <h3>2023 Pokémon Oceania International Championships - VGC</h3>
+                        <h3>2023 Pokemon Oceania International Championships - VGC</h3>
                         <div class="image-text-container">
                             <div class = "image">
                                 <!-- Image has zoom effect and alt text for accessibility -->
