--- a/Final Project/index.html
+++ b/Final Project/index.html
@@ -9,11 +9,11 @@
     <!-- Informs device to set viewport to its own width -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Summary of the web page as a news provider -->
-    <meta name="description" content="ninth generation Pokémon game, Paldea" />
+    <meta name="description" content="ninth generation Pokemon game, Paldea" />
     <!-- Author of the web page -->
     <meta name="author" content="Chiuchiyin" />
     <!-- Keywords relevant to web page content -->
-    <meta name="keywords" content="Pokémon, news, game" />
+    <meta name="keywords" content="Pokemon, news, game" />
     <!-- Link external CSS file to style and format web page !-->
     <link rel="stylesheet" href="stylesheet/main.css">
     <!-- Link external JS file for user interactivity !-->
@@ -123,13 +123,13 @@
         <article class="news-posts">
             <h1 id="main-page-title">Home | Featured</h1>
             <div class="featured-grid-container">
-                <!-- Featured section:  "Pokémon" Elden Ring Mod -->
+                <!-- Featured section:  "Pokemon" Elden Ring Mod -->
                 <div class="featured-item1">
                     <div class="image-main-container">
                         <!-- Image has zoom effect and alt text for accessibility -->
                         <img src="images/shiny-hunting.webp" alt="Player character with Miraidon">
                             <!-- Primary article headline-->
-                            <h3>Shiny Hunting Is About To Get Harder In Pokémon Scarlet And Violet</h3>
+                            <h3>Shiny Hunting Is About To Get Harder In Pokemon Scarlet And Violet</h3>
                             <!-- Primary article meta data: author, date and time posted, and number of comments -->
                             <section class="meta-data">
                                 <h4>Kenneth Shepard <i class="fas fa-pen"></i></h4>
@@ -138,9 +138,9 @@
                                 </p>
                             </section>
                                 <!-- Primary article description: Karjakin fails to defeat Carlsen in the 2016 World Chess Championship -->
-                            <p>Game Freak is rolling out another big update to Pokémon Scarlet and Violet at the end of the month, and while there’s some attention being given to the games’ 
+                            <p>Game Freak is rolling out another big update to Pokemon Scarlet and Violet at the end of the month, and while there’s some attention being given to the games’ 
                                 notorious performance issues, the solution the studio has gone with will fundamentally change certain aspects of the open-world RPG. 
-                                Specifically, the team is looking to lower the amount of Pokémon it puts on screen at a time, which means that fewer will spawn at a time. 
+                                Specifically, the team is looking to lower the amount of Pokemon it puts on screen at a time, which means that fewer will spawn at a time. 
                                 This has big implications for shiny hunting.
                             </p>
                     </div>
@@ -152,7 +152,7 @@
                             alt="Player character facing Koraidon">
                             <section class="column-card-description">
                                 <!-- Primary article headline-->
-                                <h3>Pokémon Fans Think This Elden Ring Mod Looks Better Than Scarlet And Violet</h3>
+                                <h3>Pokemon Fans Think This Elden Ring Mod Looks Better Than Scarlet And Violet</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
                                     <h4>Sisi Jiang <i class="fas fa-pen"></i></h4>
@@ -170,7 +170,7 @@
                             alt="discord group banner">
                             <section class="column-card-description">
                                 <!-- Primary article headline-->
-                                <h3>Massive Pokémon Discord Owner Banned For Allegedly Sexually Preying On Minors</h3>
+                                <h3>Massive Pokemon Discord Owner Banned For Allegedly Sexually Preying On Minors</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
                                     <h4>Ethan Gach <i class="fas fa-pen"></i></h4>
@@ -272,7 +272,7 @@
                             </div>
                             <div class="text">
                                 <!-- Primary article headline-->
-                                <h3>Use code「1STCHAMPSV」to receive Jiseok Lee's Garganacl in Pokémon Scarlet & Violet until February 20th</h3>
+                                <h3>Use code「1STCHAMPSV」to receive Jiseok Lee's Garganacl in Pokemon Scarlet & Violet until February 20th</h3>
                                 <!-- Primary article meta data: author, date and time posted, and number of comments -->
                                 <section class="meta-data">
                                     <h4>Archaic <i class="fas fa-pen"></i></h4>
