--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -9,11 +9,11 @@
     <!-- Informs device to set viewport to its own width -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Summary of the web page as a news provider -->
-    <meta name="description" content="ninth generation Pokémon game, Paldea" />
+    <meta name="description" content="ninth generation Pokemon game, Paldea" />
     <!-- Author of the web page -->
     <meta name="author" content="Chiuchiyin" />
     <!-- Keywords relevant to web page content -->
-    <meta name="keywords" content="Pokémon, news, game" />
+    <meta name="keywords" content="Pokemon, news, game" />
     <!-- Link external CSS file to style and format web page !-->
     <link rel="stylesheet" href="stylesheet/main.css">
     <!-- Link external JS file for user interactivity !-->
@@ -131,7 +131,7 @@
                     <p>The higher the level, the stronger the wild Pokemon. Five-star raids will show up for those who finished the game with all three paths required. 
                         For the sixth level, players must complete the postgame events and some level five raids.</p>
                     <!-- Image has zoom effect and alt text for accessibility -->
-                    <img src="images/tera-raid-battle.webp" alt="a tera raid battle"><br />
+                    <img src="images/tera-raid-battle.webp" alt="a tera raid battle">
                         <p>In these encounters, players get the opportunity to catch stronger Pokemon and some that are not available outside of the raid. 
                             Preparing a team for the Tera Raid Battles requires planning and strategy.
                             In this webpage, we attempt to guide you from newcomer to expert raider.
@@ -152,8 +152,8 @@
             <div class="raid-item">
                 <h3  id="prepare">How to Prepare for Tera Raid Battle</h3>
                 <div class="image-main-container">
-                    <p>Players are limited to one Pokémon per Tera Raid battle, and it is by default the lead Pokémon in their party. 
-                    Especially for higher Raids, players are incentivized to min-max several party members so that when they get to a Raid, they can choose a Pokémon that best fits the boss.
+                    <p>Players are limited to one Pokemon per Tera Raid battle, and it is by default the lead Pokemon in their party. 
+                    Especially for higher Raids, players are incentivized to min-max several party members so that when they get to a Raid, they can choose a Pokemon that best fits the boss.
                     But that is overwhelming for newer players. Our aim here is to make things simpler for you so you can enjoy what Paldea has to offer stress free.
                     </p><br />
                     <p>
@@ -324,7 +324,7 @@
                 <div class="image-main-container">
                     <h3  id="event">Tera Raid Battle Event</h3>
                     <p>
-                    The next 7 star raid event has been announced for Pokémon Scarlet & Violet. Battle a Water Tera Type Pikachu. Runs from February 24th through February 27th.
+                    The next 7 star raid event has been announced for Pokemon Scarlet & Violet. Battle a Water Tera Type Pikachu. Runs from February 24th through February 27th.
                     </p>
                     <img src="images/tera-raid-event.png" alt="Pikachu Tera Raid">
                     <p>
