--- a/Final Project/aboutpaldea.html
+++ b/Final Project/aboutpaldea.html
@@ -9,11 +9,11 @@
     <!-- Informs device to set viewport to its own width -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Summary of the web page as a news provider -->
-    <meta name="description" content="ninth generation Pokémon game, Paldea" />
+    <meta name="description" content="ninth generation Pokemon game, Paldea" />
     <!-- Author of the web page -->
     <meta name="author" content="Chiuchiyin" />
     <!-- Keywords relevant to web page content -->
-    <meta name="keywords" content="Pokémon, news, game" />
+    <meta name="keywords" content="Pokemon, news, game" />
     <!-- Link external CSS file to style and format web page !-->
     <link rel="stylesheet" href="stylesheet/main.css">
     <!-- Link external JS file for user interactivity !-->
@@ -115,7 +115,7 @@
     </header>
 
     <main>
-        <h1 id="main-page-title-center">About Paldea</h1>
+        <h1 id="main-page-title-center">About Paldea | The World We Bring You In</h1>
         <div class="paldea-grid-container">
             <div class="paldea-item1">
                 <video class="videoInsert" controls>
@@ -124,10 +124,14 @@
                 </video>
             </div>
             <div class="paldea-item1">
-                <video class="videoInsert" controls>
-                    <source src="video/videoplayback.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+                <div class="image-main-container">
+                    <p>The Paldea region (Japanese: パルデア地方 Paldea region) is a region of the Pokémon world, and the ninth core series region to be introduced. It is the setting of Pokémon Scarlet and Violet.</p>
+                    <h2>Etymology and design concept</h2>
+                    <p>Paldea may be derived from pal (friend or ally) or paideia (education or learning) and aldea, the Spanish word for village or hamlet.</p><br />
+                    <p>Paldea is based on the Iberian Peninsula — which comprises Spain, Portugal, and Andorra — and its shared culture and fauna. It draws inspiration primarily from the culture of Spain, as can be seen in its gastronomy, musical influences, Pokémon nomenclature, as well as the sporadic use of the Spanish language by the locals of Paldea; however, specific references to Portugal, its architecture and language can also be found, mainly on western locations of Paldea.</p>
+                    <img src="images/Paldea-Iberian-Peninsula-comparison.png" alt="A comparison of Paldea to the Iberian Peninsula">
+                    <p>Paldea has 12 cities and towns. Instead of routes, Paldea is divided into four provinces, each with three areas (except for the South Province, which has six). At the center of the region is the Great Crater of Paldea, which houses Area Zero.</p><br />
+                </div>
             </div>
             <div class="paldea-item2">
                 <h2>Paldean History</h2>
@@ -168,13 +172,18 @@
                             <div>
                                 <!--Use the time tag-->
                                 <time>200 years prior</time>The Area Zero Expedition claimed to have become the first exploration team to reach the bottom of Area Zero. Team member Heath, a famed author and natural historian, published his account of the expedition as the Scarlet Book/Violet Book. The book's contents proved to be so fantastical that Heath and the rest of the Area Zero Expedition were accused of lying and widely discredited.
-                                The Area Zero Expedition planted Herba Mystica, a plant they discovered in Area Zero, in five sites around Paldea in an attempt to cultivate it. They abandoned the project when local Pokémon consumed the Herba Mystica and grew into fearsome Titans.
                             </div>
                         </li>
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>c. 140 years prior</time>Terastallized Pokémon were discovered for the first time in Area Zero
+                                <time>200 years prior</time>The Area Zero Expedition planted Herba Mystica, a plant they discovered in Area Zero, in five sites around Paldea in an attempt to cultivate it. They abandoned the project when local Pokemon consumed the Herba Mystica and grew into fearsome Titans.
+                            </div>
+                        </li>
+                        <li>
+                            <div>
+                                <!--Use the time tag-->
+                                <time>c. 140 years prior</time>Terastallized Pokemon were discovered for the first time in Area Zero
                             </div>
                         </li>
                         <li>
@@ -186,7 +195,7 @@
                         <li>
                             <div>
                                 <!--Use the time tag-->
-                                <time>c. 10 years prior</time>Professor Sada/Professor Turo discovered that the energy emitted by the crystals in Area Zero causes the Terastal phenomenon. The professor proceeded to invent the Tera Orb technology, sharing it with the Pokémon League and the Academy.
+                                <time>c. 10 years prior</time>Professor Sada/Professor Turo discovered that the energy emitted by the crystals in Area Zero causes the Terastal phenomenon. The professor proceeded to invent the Tera Orb technology, sharing it with the Pokemon League and the Academy.
                             </div>
                         </li>
                         <li>
@@ -195,9 +204,81 @@
                                 <time>c. One and a half years prior</time>Nemona passed the Paldea League's Champion Assessment and became the youngest person in Paldean history to achieve Champion Rank.
                             </div>
                         </li>
+                        <li>
+                        </li>
                     </ul>
                 </section>
             </div>
+            <div class="paldea-item3">
+                You begin your adventure
+            </div>
         </div>
     </main>
+
+    <footer>
+        <!-- Four column sections: each with a header and four links related to the header -->
+        <section class="footer-body">
+
+            <!-- First column: Language section
+                Provide language accessibility for popular languages used by the majority of users -->
+
+            <section class="footer-section">
+                <!-- Language section header -->
+                <h3>Languages</h3>
+                <ul>
+                    <li><a href="#">English</a></li>
+                    <li><a href="#">Français</a></li>
+                    <li><a href="#">Español</a></li>
+                    <li><a href="#">中文</a></li>
+                </ul>
+            </section>
+
+            <!-- Second column: Menu section
+                Provide information on legal and security related concerns -->
+
+            <section class="footer-section">
+                <!-- Menu section header -->
+                <h3>Menu</h3>
+                <ul>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Support</a></li>
+                </ul>
+            </section>
+
+            <!-- Third column: Resources section
+                Provide an interface for users to interact with the chess database through an interactive board -->
+
+            <section class="footer-section">
+                <!-- Resources section header -->
+                <h3>Resources</h3>
+                <ul>
+                    <li><a href="#">Openings Explorer</a></li>
+                    <li><a href="#">Games Database</a></li>
+                    <li><a href="#">Board Editor</a></li>
+                    <li><a href="#">Analysis Board</a></li>
+                </ul>
+            </section>
+
+            <!-- Fourth column: Social media section
+                Provide an outlet for users to connect with the company through popular social media platforms -->
+
+            <section class="footer-section">
+                <!-- Social media section header -->
+                <h3>Connect with Us</h3>
+                <!-- Circular social media icons for Facebook, Twitter, LinkedIn and Instagram-->
+                <ul class="social-icons">
+                    <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                </ul>
+            </section>
+            <!-- Copyright information -->
+            <section class="copyright-statement">
+                <h4>© 2021 Chess News | All Rights Reserved</h4>
+            </section>
+        </section>
+    </footer>
 </body>
