separate CSS files
CSS for current news is pretty much done

--- a/Final Project/raidguide.html
+++ b/Final Project/raidguide.html
@@ -16,6 +16,7 @@
     <meta name="keywords" content="Pokemon, news, game" />
     <!-- Link external CSS file to style and format web page !-->
     <link rel="stylesheet" href="stylesheet/main.css">
+    <link rel="stylesheet" href="stylesheet/raid.css">
     <!-- Link external JS file for user interactivity !-->
     <!-- Defer ensures DOM is fully loaded before JS scripts are executed -->
     <script src="scripts/scripts.js" defer></script>
