add shadow and some clean up on first two pages

--- a/Final Project/currentnews.html
+++ b/Final Project/currentnews.html
@@ -169,7 +169,7 @@
                                     </p>
                         </div>
                     </div>
-                    <div class="current-item5">
+                    <div class="current-item4">
                         <div class="image-main-container">
                             <!-- Image has zoom effect and alt text for accessibility -->
                             <img src="images/leak.jpeg"
@@ -191,7 +191,7 @@
                                     </p>
                         </div>
                     </div>
-                    <div class="current-item6">
+                    <div class="current-item4">
                         <div class="image-main-container">
                             <!-- Image has zoom effect and alt text for accessibility -->
                             <img src="images/pokemon-sv-Garganacl-mystery-gift.webp"
@@ -212,7 +212,7 @@
                                     </p>
                         </div>
                     </div>
-                    <div class="current-item7">
+                    <div class="current-item4">
                         <div class="image-main-container">
                             <!-- Image has zoom effect and alt text for accessibility -->
                             <img src="images/Quaquaval.webp"
@@ -234,7 +234,7 @@
                                     </p>
                         </div>
                     </div>
-                    <div class="current-item8">
+                    <div class="current-item4">
                         <div class="image-main-container">
                             <!-- Image has zoom effect and alt text for accessibility -->
                             <img src="images/shiny-hunting.webp" alt="Player character with Miraidon">
@@ -255,7 +255,7 @@
                                 </p>
                         </div>
                     </div>
-                    <div class="current-item9">
+                    <div class="current-item4">
                         <div class="image-main-container">
                             <!-- Image has zoom effect and alt text for accessibility -->
                             <img src="images/pokemon-sv.jpeg" alt="pokemon-sv-official-mascot">
@@ -286,7 +286,7 @@
                                 alt="Garganacl">
                             </div>
                             <div class="text">
-                                <p>Gavin Michaels took the title of OCIC 2023 Masters Champion! after beating rival Alberto Lara 2-0<p>
+                                <p>Gavin Michaels took the title of OCIC 2023 Masters Champion! after beating rival Alberto Lara 2-0<p><br />
                             </div>
                         </div>
                         <div class="image-text-container">
@@ -296,7 +296,7 @@
                                 alt="Garganacl">
                             </div>
                             <div class="text">
-                                <p>In another 2-0 sweep,Benjamin claims victory over Tin Tin to become the Oceania International Seniors Champion!</p>
+                                <p>In another 2-0 sweep, Benjamin claims victory over Tin Tin to become the Oceania International Seniors Champion!</p><br />
                             </div>
                         </div>
                         <div class="image-text-container">
@@ -306,7 +306,7 @@
                                 alt="Garganacl">
                             </div>
                             <div class="text">
-                                <p>Jiseok Lee's Garganacl will be distributed via code in the Oceania International Championships stream</p>
+                                <p>Jiseok Lee's Garganacl will be distributed via code in the Oceania International Championships stream</p><br />
                             </div>
                         </div>
                     </div>
@@ -319,7 +319,7 @@
                                 alt="Garganacl">
                             </div>
                             <div class="text">
-                                <p>Tera Raid Battles for Garchomp and Sylveon is now live</p>
+                                <p>7-Star Tera Raid Battles for Pikachu is now live</p>
                             </div>
                         </div>
                         <div class="image-text-container">
@@ -339,7 +339,7 @@
                                 alt="Garganacl">
                             </div>
                             <div class="text">
-                                <p>Second Round of 7-Star Greninja Tera Raid has ended </p>
+                                <p>Tera Raid Battles for Garchomp and Sylveon have ended </p>
                             </div>
                         </div>
                     </div>
